--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -1054,7 +1054,7 @@
     "SafetySection.category.execution": "Executions",
     "SafetySection.category.forcedScientificExperiments": "Experimentation scientifique forcée",
     "SafetySection.category.murderOfNonCombatants": "Meurtre de non combatants",
-    "SafetySection.category.torture": "TOrture",
+    "SafetySection.category.torture": "Torture",
 
     "SafetySectionType.violence": "Violence",
     "SafetySectionType.gameplayMechanics": "Mécaniques de Jeu",
