translations; minor clean up

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -57,6 +57,7 @@
 
     "TokenCreator.section.mouth.shape": "Mouth",
     "TokenCreator.section.mouth.colour": "Lipstick Colour",
+    "TokenCreator.section.mouth.shadow": "Shadow",
     "TokenCreator.section.mouth.moustache": "Moustache",
     "TokenCreator.section.mouth.beard": "Beard",
 
