--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -517,7 +517,7 @@
 
     "EarlyOutlook.BusinessOrTrade.description": "Семья персонажа может иметь связи в бесконечном количестве\n различных мест Вселенной, руководя и управляя грандиозным бизнесом. Они могут быть торговцами или участвовать в межпланетных перевозках. В любом случае\n персонаж вырос среди представителей из разных слоёв общества, в том числе и живущих за пределами Федерации,\n и его взгляд на жизнь сформировался соответственно.",
 
-    "EarlyOutlook.agricultureOrRural": "Сельское хозяйство и фермерство",
+    "EarlyOutlook.agricultureOrRural": "Сельское хозяйство или фермерство",
 
     "EarlyOutlook.agricultureOrRural.description": "Персонаж рос, скорее всего, на природе, в сельских общинах, на границе или где-то ещё вдали от городской суеты. Он мог серьёзно заниматься сельским хозяйством, выращивая настоящие продукты питания, дополняющие синтезированные или реплицированные блюда.",
 
